[tool.poetry]
name = "python-ssdb"
version = "v1.0.2"
description = "Python implementation of SSDB client"
authors = ["recoteam <recoteam@kakaocorp.com>"]
readme = "README.md"
repository = "https://github.com/kakao/python-ssdb"
packages = [{include = "ssdb"}]

[tool.poetry.build]
script = "build_extension.py"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
poethepoet = "^0.18.1"

[tool.poe.tasks]
  [tool.poe.tasks.isort]
  help = "Run isort on the code base"
  cmd  = "isort --profile black . -p=ssdb --skip=3rd/ --skip=build/ --skip=.pyx"

  [tool.poe.tasks.black]
  help = "Run black on the code base"
  cmd  = "black . --check"

  [tool.poe.tasks.flake8-py]
  help = "Run flake8 on the code base"
  cmd = "flake8 . --filename='*.py' --ignore=E402,E501,E731,E741 --exclude=setup.py"

  [tool.poe.tasks.flake8-pyx]
  help = "Run flake8 on the code base"
  cmd = "flake8 . --filename='*.pyx' --ignore=E225,E226,E227,E402,E501,E741,E901,E999"

  [tool.poe.tasks.lint]
  help = "Run linting tools on the code base"
  sequence  = ["isort", "black", "flake8-py", "flake8-pyx"]

[build-system]
requires = ["poetry-core", "Cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
