[tool.poetry]
name = "python-ssdb"
version = "v1.0.3"
description = "SSDB Python Client"
authors = ["recoteam <recoteam@kakaocorp.com>"]
readme = "README.md"
repository = "https://github.com/kakao/python-ssdb"
license = "Apache2"
packages = [{ include = "ssdb" }]
include = [{ path = "ssdb/**/*.so", format = "wheel" }]

[tool.poetry.build]
script = "build_extension.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
poethepoet = "^0.18.1"

[tool.poe.tasks]
  [tool.poe.tasks.isort]
  help = "Run isort on the code base"
  cmd  = "isort --profile black ssdb/ -p=ssdb --skip=3rd/ --skip=build/ --skip=.pyx"

  [tool.poe.tasks.black]
  help = "Run black on the code base"
  cmd  = "black ssdb/"

  [tool.poe.tasks.flake8-pyx]
  help = "Run flake8 on the code base"
  cmd = "flake8 ssdb/ --filename='*.pyx' --ignore=E225,E226,E227,E402,E501,E741,E901,E999"

  [tool.poe.tasks.lint]
  help = "Run linting tools on the code base"
  sequence  = ["isort", "black", "flake8-pyx"]

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
