[project]
name = "python-ssdb"
version = "1.0.4"
description = "SSDB Python Client"
requires-python = ">=3.9"
authors = [{name = "recoteam", email = "recoteam@kakaocorp.com"}]
readme = "README.md"
license = { text = "Apache2" }
keywords = ["SSDB"]
classifiers = [
    "License :: Apache Software License",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Cython",
]

[build-system]
requires = ["Cython>=0.29.34", "setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"
